# aid_ros2-master

aid_ros2-master/: .gitignore  .gitmodules  README.md
aid_ros2-master/.github/workflows/: build.yml
aid_ros2-master/aid_cartographer/: CMakeLists.txt  package.xml
aid_ros2-master/aid_cartographer/config/: aid_localization.lua  aid_mapping.lua
aid_ros2-master/aid_cartographer/launch/: cartographer.launch.py  localization_2d.launch.py  map_saver_server.launch.py  occupancy_grid.launch.py
aid_ros2-master/aid_cartographer/rviz/: aid_cartographer.rviz
aid_ros2-master/aid_navigation2/: CMakeLists.txt  package.xml
aid_ros2-master/aid_navigation2/launch/: navigation2.launch.py
aid_ros2-master/aid_navigation2/param/: aid_robot.yaml
aid_ros2-master/aid_robot_msgs/: CMakeLists.txt  package.xml
aid_ros2-master/aid_robot_msgs/srv/: DrawPicture.srv  ForbiddenGet.srv
aid_ros2-master/aid_robot_py/: README.md  package.xml  setup.cfg  setup.py
aid_ros2-master/aid_robot_py/aid_robot_py/: ai_manager_server.py  db.py  db.sql  follow_waypionts_transform.py  launch_manager.py  map_manager_server.py  map_transform.py  robot_pose_pub.py  robot_status_manager.py
aid_ros2-master/aid_robot_py/modules/: AidLuxIPC-1.0.0-cp38-cp38-linux_aarch64.whl
aid_ros2-master/aid_robot_py/modules/ros_model/: __init__.py
aid_ros2-master/aid_robot_py/modules/ros_model/detecter/: __init__.py  detecter.py  utils.py
aid_ros2-master/aid_robot_py/modules/ros_model/handpose/: __init__.py  handpose.py  utils.py
aid_ros2-master/aid_robot_py/modules/ros_model/track/: track.py  utils.py
aid_ros2-master/aid_waypoint_follower/: CMakeLists.txt  README.md  package.xml
aid_ros2-master/aid_waypoint_follower/include/aid_waypoint_follower/: waypoint_follower.hpp
aid_ros2-master/aid_waypoint_follower/src/: main.cpp  waypoint_follower.cpp
aid_ros2-master/bluesea-ros2/: CMakeLists.txt
aid_ros2-master/bluesea-ros2/include/: alarm.h  parser.h  reader.h
aid_ros2-master/bluesea-ros2/params/: LDS-50C-C20E.yaml  LSS-40S-B20E44.yaml
aid_ros2-master/bluesea-ros2/src/: bluesea_node.cpp  parser.cpp  tcp_reader.cpp  uart_reader.cpp  udp_reader.cpp
aid_ros2-master/chassis_comm/: CMakeLists.txt  package.xml
aid_ros2-master/chassis_comm/include/chassis_comm/: odometry.hpp
aid_ros2-master/chassis_comm/launch/: chassis_comm.launch.py
aid_ros2-master/chassis_comm/src/: main.cpp  odometry.cpp
aid_ros2-master/laser_undistortion/: CMakeLists.txt  package.xml
aid_ros2-master/laser_undistortion/launch/: laser_undistortion.launch.py
aid_ros2-master/laser_undistortion/params/: undistortion.yaml
aid_ros2-master/laser_undistortion/src/: lidar_motion_undistortion.cpp
aid_ros2-master/nav2_pointcloud_costmap_plugin/: CMakeLists.txt  package.xml  pointcloud_layer.xml
aid_ros2-master/nav2_pointcloud_costmap_plugin/include/nav2_pointcloud_costmap_plugin/: pointcloud_layer.hpp
aid_ros2-master/nav2_pointcloud_costmap_plugin/src/: pointcloud_layer.cpp
aid_ros2-master/robot_bringup/: CMakeLists.txt  package.xml
aid_ros2-master/robot_bringup/launch/: robot.launch.py  robot_bringup.launch.xml  robot_bringup_sim.launch.xml  robot_sim.launch.py  robot_state_publisher.launch.py
aid_ros2-master/robot_bringup/param/: jade_rabbit.yaml
aid_ros2-master/robot_bringup/script/: 01-netcfg.yaml  install.bash  ros2_robot_start.bash  ros_launch.service
aid_ros2-master/robot_bringup/src/: forbidden_map_create.cpp  map_transform.cpp  robot_status_manager.cpp
aid_ros2-master/robot_bringup/urdf/: robot.urdf
aid_ros2-master/teleop_twist_joy/config/: wee.config.yaml
aid_ros2-master/teleop_twist_joy/launch/: teleop-launch.py
